--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -305,12 +305,13 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/home_write_journl"/>
 
                 <TextView
+                    style="@style/TopPlusText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"/>
+                    android:text="@string/write_journal"/>
 
             </LinearLayout>
 
@@ -325,12 +326,13 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/home_send_approval"/>
 
                 <TextView
+                    style="@style/TopPlusText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"/>
+                    android:text="@string/send_approval"/>
 
             </LinearLayout>
 
@@ -345,12 +347,13 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/home_send_notice"/>
 
                 <TextView
+                    style="@style/TopPlusText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"/>
+                    android:text="@string/send_notice"/>
 
             </LinearLayout>
 
@@ -365,12 +368,13 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/home_write_customer"/>
 
                 <TextView
+                    style="@style/TopPlusText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"/>
+                    android:text="@string/write_customer"/>
 
             </LinearLayout>
 
@@ -382,7 +386,7 @@
             android:background="@android:color/white"
             android:orientation="horizontal"
             android:paddingTop="20dp"
-            android:paddingBottom="10dp"
+            android:paddingBottom="20dp"
             android:weightSum="4">
 
             <LinearLayout
@@ -396,12 +400,13 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/home_order_meeting"/>
 
                 <TextView
+                    style="@style/TopPlusText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"/>
+                    android:text="@string/order_metting"/>
 
             </LinearLayout>
 
@@ -416,12 +421,13 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/home_product_advice"/>
 
                 <TextView
+                    style="@style/TopPlusText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"/>
+                    android:text="@string/product_advice"/>
 
             </LinearLayout>
 
