--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,26 @@
         <item name="android:layout_marginTop">10dp</item>
     </style>
 
+    <!--editText-->
+    <style name="EditTextStyle">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textCursorDrawable">@drawable/edittext_cursor_shap</item>
+    </style>
+
+    <!--自定义dialog背景全透明无边框theme -->
+    <style name="WorkSortDialog" parent="android:style/Theme.Dialog">
+        <!--背景颜色及和透明程度-->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--是否去除标题 -->
+        <item name="android:windowNoTitle">true</item>
+        <!--是否去除边框-->
+        <item name="android:windowFrame">@null</item>
+        <!--是否浮现在activity之上-->
+        <item name="android:windowIsFloating">true</item>
+        <!--是否显示背景色-->
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
 </resources>
