--- a/app/src/main/res/layout/activity_write_day_plan.xml
+++ b/app/src/main/res/layout/activity_write_day_plan.xml
@@ -9,7 +9,6 @@
     android:orientation="vertical"
     tools:context="com.wtcrmandroid.activity.WriteDayPlanActivity">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,173 +33,59 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/rl_dayplan_sort"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:padding="10dp">
-
-        <ImageView
-            android:id="@+id/iv_dayplan_sort"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/iv_dayplan_sort"
-            android:hint="@string/work_sort"
-            android:paddingLeft="10dp"
-            />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_launcher"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:padding="10dp">
-
-        <ImageView
-            android:id="@+id/iv_dayplan_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
-
-        <EditText
-            android:id="@+id/tv_dayplan_content"
-            style="@style/EditTextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/iv_dayplan_content"
-            android:hint="@string/work_content"
-            android:paddingLeft="10dp"
-            />
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2">
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:padding="10dp">
-
-            <ImageView
-                android:id="@+id/iv_dayplan_person"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher"/>
-
-            <EditText
-                android:id="@+id/tv_dayplan_person"
-                style="@style/EditTextStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/iv_dayplan_person"
-                android:hint="@string/execute_person"
-                android:paddingLeft="10dp"
-                />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:padding="10dp">
-
-            <ImageView
-                android:id="@+id/iv_dayplan_persent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher"/>
-
-            <EditText
-                android:id="@+id/tv_dayplan_persent"
-                style="@style/EditTextStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/iv_dayplan_persent"
-                android:hint="@string/work_persent"
-                android:paddingLeft="10dp"
-                />
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@android:color/white"
-        android:padding="10dp">
-
-        <ImageView
-            android:id="@+id/iv_dayplan_remark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
-
-        <EditText
-            android:id="@+id/tv_dayplan_remark"
-            style="@style/EditTextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/iv_dayplan_remark"
-            android:hint="@string/remark"
-            android:paddingLeft="10dp"
-            />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_dayplan_addjob"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:padding="10dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher"/>
+            <com.wtcrmandroid.view.MyListView
+                android:id="@+id/lv_write_dayplan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </com.wtcrmandroid.view.MyListView>
 
-            <TextView
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:id="@+id/rl_dayplan_addjob"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:text="@string/add_work"
-                />
+                android:layout_below="@id/lv_write_dayplan"
+                android:background="@android:color/white"
+                android:padding="10dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_launcher"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:text="@string/add_work"
+                        />
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
 
         </LinearLayout>
 
+    </ScrollView>
 
-    </RelativeLayout>
+
+
 
 
 </LinearLayout>
