--- a/app/src/main/res/layout/dialog_complete_condition.xml
+++ b/app/src/main/res/layout/dialog_complete_condition.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@android:color/white"
-              android:orientation="vertical">
+              android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:text="@string/work_sort"
+        android:text="@string/complete_condition"
         android:textSize="15sp"
         android:textColor="@android:color/black"/>
 
@@ -28,51 +27,38 @@
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:textColor="@android:color/black"
-                android:text="A类"/>
+                android:text="已完成"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:textColor="@android:color/black"
-                android:text="B类"/>
+                android:text="未完成"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:textColor="@android:color/black"
-                android:text="C类"/>
+
 
         </LinearLayout>
 
         <RadioGroup
-            android:id="@+id/work_sort_rg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:orientation="vertical">
 
             <RadioButton
-                android:id="@+id/rb_A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 />
 
             <RadioButton
-                android:id="@+id/rb_B"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 />
 
-            <RadioButton
-                android:id="@+id/rb_C"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                />
+
         </RadioGroup>
 
 
@@ -93,7 +79,6 @@
             android:text="确定"/>
 
         <Button
-            android:id="@+id/bt_worksort_dialog_cancle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
