--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,7 +44,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_rzgl"
+                        android:drawableTop="@mipmap/ic_home_rzgl"
                         android:gravity="center"
                         android:text="日志管理"
                         android:textSize="15dp" />
@@ -58,7 +58,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawablePadding="10dp"
-                            android:drawableTop="@mipmap/home_tzgg"
+                            android:drawableTop="@mipmap/ic_home_tzgg"
                             android:gravity="center"
                             android:text="通知公告"
                             android:textSize="15dp" />
@@ -69,7 +69,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_gwsp"
+                        android:drawableTop="@mipmap/ic_home_gwsp"
                         android:gravity="center"
                         android:text="公文审批"
                         android:textSize="15dp" />
@@ -79,7 +79,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_wq"
+                        android:drawableTop="@mipmap/ic_home_wq"
                         android:gravity="center"
                         android:text="外勤"
                         android:textSize="15dp" />
@@ -93,7 +93,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_hysyy"
+                        android:drawableTop="@mipmap/ic_home_hysyy"
                         android:gravity="center"
                         android:text="会议室预约"
                         android:textSize="15dp" />
@@ -103,7 +103,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_yggl"
+                        android:drawableTop="@mipmap/ic_home_yggl"
                         android:gravity="center"
                         android:text="员工管理"
                         android:textSize="15dp" />
@@ -149,7 +149,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_zb"
+                        android:drawableTop="@mipmap/ic_home_zb"
                         android:gravity="center"
                         android:text="战报"
                         android:textSize="15dp" />
@@ -161,7 +161,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_sys"
+                        android:drawableTop="@mipmap/ic_home_sys"
                         android:gravity="center"
                         android:text="扫一扫"
                         android:textSize="15dp" />
@@ -171,7 +171,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_lrkh"
+                        android:drawableTop="@mipmap/ic_home_lrkh"
                         android:gravity="center"
                         android:text="录入客户"
                         android:textSize="15dp" />
@@ -181,7 +181,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_zkhk"
+                        android:drawableTop="@mipmap/ic_home_zkhk"
                         android:gravity="center"
                         android:text="主客户库"
                         android:textSize="15dp" />
@@ -195,7 +195,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_wdkhk"
+                        android:drawableTop="@mipmap/ic_home_wdkhk"
                         android:gravity="center"
                         android:text="我的客户库"
                         android:textSize="15dp" />
@@ -205,7 +205,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_xdgh"
+                        android:drawableTop="@mipmap/ic_home_xdgh"
                         android:gravity="center"
                         android:text="续单公海"
                         android:textSize="15dp" />
@@ -249,7 +249,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_cpjy"
+                        android:drawableTop="@mipmap/ic_home_cpjy"
                         android:gravity="center"
                         android:text="产品建议"
                         android:textSize="15dp" />
@@ -259,7 +259,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/home_mt"
+                        android:drawableTop="@mipmap/ic_home_mt"
                         android:gravity="center"
                         android:text="密条"
                         android:textSize="15dp" />
