申中佳标题头布局

--- a/app/src/main/res/layout/dialog_selection_job_categories.xml
+++ b/app/src/main/res/layout/dialog_selection_job_categories.xml
@@ -14,6 +14,7 @@
         android:textColor="#2B2F33"/>
 
     <RadioGroup
+        android:id="@+id/rgp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp">
