--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,11 +40,12 @@
                 <TableRow android:paddingTop="25dp">
 
                     <TextView
+                        android:id="@+id/tv_rzgl"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_rzgl"
+                        android:drawableTop="@mipmap/ic_home_log_management"
                         android:gravity="center"
                         android:text="日志管理"
                         android:textSize="15dp" />
@@ -58,7 +59,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawablePadding="10dp"
-                            android:drawableTop="@mipmap/ic_home_tzgg"
+                            android:drawableTop="@mipmap/ic_home_notice_announcement"
                             android:gravity="center"
                             android:text="通知公告"
                             android:textSize="15dp" />
@@ -69,7 +70,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_gwsp"
+                        android:drawableTop="@mipmap/ic_home_document_processing"
                         android:gravity="center"
                         android:text="公文审批"
                         android:textSize="15dp" />
@@ -79,7 +80,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_wq"
+                        android:drawableTop="@mipmap/ic_home_field"
                         android:gravity="center"
                         android:text="外勤"
                         android:textSize="15dp" />
@@ -93,7 +94,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_hysyy"
+                        android:drawableTop="@mipmap/ic_home_meeting_room_reservation"
                         android:gravity="center"
                         android:text="会议室预约"
                         android:textSize="15dp" />
@@ -103,7 +104,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_yggl"
+                        android:drawableTop="@mipmap/ic_home_employees_management"
                         android:gravity="center"
                         android:text="员工管理"
                         android:textSize="15dp" />
@@ -149,7 +150,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_zb"
+                        android:drawableTop="@mipmap/ic_home_war_news"
                         android:gravity="center"
                         android:text="战报"
                         android:textSize="15dp" />
@@ -161,7 +162,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_sys"
+                        android:drawableTop="@mipmap/ic_home_scan"
                         android:gravity="center"
                         android:text="扫一扫"
                         android:textSize="15dp" />
@@ -171,7 +172,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_lrkh"
+                        android:drawableTop="@mipmap/ic_home_enter_customer"
                         android:gravity="center"
                         android:text="录入客户"
                         android:textSize="15dp" />
@@ -181,7 +182,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_zkhk"
+                        android:drawableTop="@mipmap/ic_home_main_customer_library"
                         android:gravity="center"
                         android:text="主客户库"
                         android:textSize="15dp" />
@@ -195,7 +196,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_wdkhk"
+                        android:drawableTop="@mipmap/ic_home_my_customer_library"
                         android:gravity="center"
                         android:text="我的客户库"
                         android:textSize="15dp" />
@@ -205,7 +206,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_xdgh"
+                        android:drawableTop="@mipmap/ic_home_continue_to_single_high_seas"
                         android:gravity="center"
                         android:text="续单公海"
                         android:textSize="15dp" />
@@ -249,7 +250,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_cpjy"
+                        android:drawableTop="@mipmap/ic_home_product_advice"
                         android:gravity="center"
                         android:text="产品建议"
                         android:textSize="15dp" />
@@ -259,7 +260,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_mt"
+                        android:drawableTop="@mipmap/ic_home_article_secret"
                         android:gravity="center"
                         android:text="密条"
                         android:textSize="15dp" />
