--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
+                android:paddingBottom="25dp"
                 android:stretchColumns="0">
 
                 <TableRow android:paddingTop="25dp">
@@ -141,6 +142,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
+                android:paddingBottom="25dp"
                 android:stretchColumns="0">
 
                 <TableRow android:paddingTop="25dp">
@@ -241,6 +243,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
+                android:paddingBottom="25dp"
                 android:stretchColumns="0">
 
                 <TableRow android:paddingTop="25dp">
@@ -280,6 +283,10 @@
                 </TableRow>
 
             </TableLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:background="#f5f6f7"/>
         </LinearLayout>
 
     </ScrollView>
