--- a/app/src/main/res/layout/activity_journal_manager.xml
+++ b/app/src/main/res/layout/activity_journal_manager.xml
@@ -37,7 +37,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/home_write_journl"/>
+                    android:src="@mipmap/ic_rzgl_daysum"/>
 
                 <TextView
                     style="@style/TopPlusText"
@@ -72,7 +72,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/home_write_journl"/>
+                    android:src="@mipmap/ic_rzgl_dayplan"/>
 
                 <TextView
                     style="@style/TopPlusText"
@@ -116,7 +116,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/home_write_journl"/>
+                    android:src="@mipmap/ic_rzgl_weeksum"/>
 
                 <TextView
                     style="@style/TopPlusText"
@@ -151,7 +151,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/home_write_journl"/>
+                    android:src="@mipmap/ic_rzgl_weekplan"/>
 
                 <TextView
                     style="@style/TopPlusText"
@@ -172,29 +172,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-
+        android:layout_marginTop="25dp"
         android:padding="10dp">
 
         <ImageView
             android:id="@+id/iv_myjournal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_rzgl_myjournal"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/iv_myjournal"
-            android:paddingLeft="10dp"
-            android:text="@string/app_name"
+            android:paddingLeft="20dp"
+            android:text="@string/myjournal"
+            android:textColor="@color/colorIconText"
             />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_launcher"/>
+            android:layout_centerVertical="true"
+            android:src="@mipmap/ic_rzgl_arrow"/>
 
     </RelativeLayout>
 
@@ -203,63 +205,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-
         android:padding="10dp">
 
         <ImageView
             android:id="@+id/iv_myweekjournal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_rzgl_bmygrz"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/iv_myweekjournal"
-            android:paddingLeft="10dp"
-            android:text="@string/app_name"
+            android:paddingLeft="20dp"
+            android:text="@string/bmygrz"
+            android:textColor="@color/colorIconText"
             />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_launcher"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_journalManager_apartmentjournal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/white"
-
-        android:padding="10dp">
-
-        <ImageView
-            android:id="@+id/iv_appartmentjournal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/iv_appartmentjournal"
-            android:paddingLeft="10dp"
-            android:text="@string/app_name"
-            />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_rzgl_arrow"/>
 
     </RelativeLayout>
+
 
 
 </LinearLayout>
