--- a/app/src/main/res/layout/activity_write_day_plan.xml
+++ b/app/src/main/res/layout/activity_write_day_plan.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,83 +9,23 @@
     android:orientation="vertical"
     tools:context="com.wtcrmandroid.activity.WriteDayPlanActivity">
 
-    <RelativeLayout
+
+    <TextView
+        android:id="@+id/tv_dayplan_submit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@android:color/white"
-        android:padding="10dp">
+        android:layout_height="50dp"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:text="@string/submit"
+        android:textColor="#ffffff"/>
 
-        <TextView
-            android:id="@+id/tv_dayplan_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="@string/app_name"/>
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="@null"
-            android:src="@mipmap/ic_launcher"/>
-
-    </RelativeLayout>
-
-    <ScrollView
+    <ListView
+        android:id="@+id/lv_write_dayplan"
+        android:layout_above="@id/tv_dayplan_submit"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <com.wtcrmandroid.view.MyListView
-                android:id="@+id/lv_write_dayplan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </com.wtcrmandroid.view.MyListView>
-
-            <RelativeLayout
-                android:id="@+id/rl_dayplan_addjob"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/lv_write_dayplan"
-                android:background="@android:color/white"
-                android:padding="10dp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_launcher"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="10dp"
-                        android:text="@string/add_work"
-                        />
-
-                </LinearLayout>
+        android:layout_height="wrap_content">
+    </ListView>
 
 
-            </RelativeLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
-
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
