--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
 
     <style name="TopPlusText">
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/colorIconText</item>
+        <item name="android:textColor">@color/colorContext</item>
         <item name="android:layout_marginTop">10dp</item>
     </style>
 
@@ -50,5 +50,7 @@
         <!--是否显示背景色-->
         <item name="android:backgroundDimEnabled">true</item>
     </style>
+
+
 
 </resources>
