新增销售写日志模块、写日计划、写日总结布局文件；

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,6 +56,17 @@
         <item name="android:backgroundDimEnabled">true</item>
     </style>
 
+    <!--较黑 36-->
+    <style name="ContentText">
+        <item name="android:textColor">@color/colorIconText</item>
+        <item name="android:textSize">@dimen/Text36</item>
+    </style>
+
+    <!--浅色 36-->
+    <style name="HintText">
+        <item name="android:textColor">@color/colorContext</item>
+        <item name="android:textSize">@dimen/Text36</item>
+    </style>
 
 
 </resources>
