--- a/app/src/main/res/layout/activity_my_journal.xml
+++ b/app/src/main/res/layout/activity_my_journal.xml
@@ -74,6 +74,9 @@
         android:id="@+id/lv_myjournal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
         android:layout_below="@id/ll_below_titlebar"
         />
 
