--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,5 +68,11 @@
         <item name="android:textSize">@dimen/Text36</item>
     </style>
 
+    <!--浅色 32-->
+    <style name="HintsText">
+        <item name="android:textColor">@color/colorContext</item>
+        <item name="android:textSize">@dimen/Text32</item>
+    </style>
+
 
 </resources>
