--- a/app/src/main/res/layout/activity_xs_write_dayplan.xml
+++ b/app/src/main/res/layout/activity_xs_write_dayplan.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
     android:orientation="vertical"
-    tools:context="com.wtcrmandroid.activity.WriteDayPlanActivity">
+    android:background="@color/colorBackground"
+    tools:context="com.wtcrmandroid.activity.XsWriteDayplanActivity">
+
 
     <com.wtcrmandroid.custompricing.TitleBar
         android:id="@+id/titlebar"
         android:layout_width="match_parent"
-        android:layout_height="45dp">
-
+        android:layout_height="@dimen/titlebar_height">
     </com.wtcrmandroid.custompricing.TitleBar>
 
     <RelativeLayout
-        android:id="@+id/rl_head"
-        android:layout_below="@id/titlebar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -42,23 +40,21 @@
 
     </RelativeLayout>
 
+    <ListView
+        android:id="@+id/lv_xs_dayplan"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+    </ListView>
+
     <TextView
         android:id="@+id/tv_dayplan_submit"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorPrimary"
-        android:layout_alignParentBottom="true"
         android:gravity="center"
         android:text="@string/submit"
         android:textColor="#ffffff"/>
 
-    <ListView
-        android:id="@+id/lv_write_dayplan"
-        android:layout_above="@id/tv_dayplan_submit"
-        android:layout_below="@id/rl_head"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
-
-
-</RelativeLayout>
+</LinearLayout>
