--- a/app/src/main/res/layout/activity_write_week_conclusion.xml
+++ b/app/src/main/res/layout/activity_write_week_conclusion.xml
@@ -39,7 +39,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@mipmap/ic_gray_arrow"/>
+            android:background="@mipmap/ic_grayright_arrow"/>
     </LinearLayout>
     <ListView
         android:id="@+id/lv_write_work_plan"
