--- a/app/src/main/res/layout/item_write_daysum.xml
+++ b/app/src/main/res/layout/item_write_daysum.xml
@@ -120,7 +120,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_gray_arrow"/>
+            android:src="@mipmap/ic_grayright_arrow"/>
 
     </LinearLayout>
 
