--- a/app/src/main/res/layout/item_xs_xrjh_foot.xml
+++ b/app/src/main/res/layout/item_xs_xrjh_foot.xml
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_gray_arrow"/>
+            android:src="@mipmap/ic_grayright_arrow"/>
 
 
 
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_gray_arrow"/>
+            android:src="@mipmap/ic_grayright_arrow"/>
 
         <TextView
             android:id="@+id/tv_genjin"
