--- a/app/src/main/res/layout/widget_title_bar.xml
+++ b/app/src/main/res/layout/widget_title_bar.xml
@@ -24,7 +24,7 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/left_image"
             android:textColor="#fff"
-            android:textSize="18dp" />
+            android:textSize="16sp" />
     </RelativeLayout>
 
     <TextView
@@ -40,7 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:paddingRight="10dp">
+        android:layout_marginRight="10dp"
+        >
 
         <TextView
             android:id="@+id/right_text"
